fix: publication types routes fixed (Mario)
