# swagger.json
@@ -19,22 +19,10 @@
     },
     "servers": [
       {
-        "url": "http://localhost:8000/"
+        "url": "http://localhost:8000/api/v1"
       }
     ],
     "tags": [
-      {
-        "name": "pet",
-        "description": "Para Cuando?",
-        "externalDocs": {
-          "description": "Find out more",
-          "url": "http://swagger.io"
-        }
-      },
-      {
-        "name": "store",
-        "description": "Access to Petstore orders"
-      },
       {
         "name": "user",
         "description": "Operations about user"
@@ -50,19 +38,11 @@
           "description": "Get all publications types",
           "parameters": [
             {
-              "name": "status",
+              "name": "publicationId",
               "in": "query",
               "required": false,
-              "explode": true,
-              "schema": {
-                "type": "string",
-                "default": "available",
-                "enum": [
-                  "available",
-                  "pending",
-                  "sold"
-                ]
-              }
+              "explode": true
+              
             }
           ],
           "responses": {
@@ -88,18 +68,14 @@
             "publicationsById"
           ],
           "summary": "Find a publication by ID",
-          "description": "Returns a single pet",
+          "description": "Returns a single publication",
           "operationId": "getPublicationType",
           "parameters": [
             {
               "name": "publicationId",
-              "in": "path",
-              "description": "ID of publication to return",
-              "required": true,
-              "schema": {
-                "type": "integer",
-                "format": "int64"
-              }
+              "in": "publicationID",
+              "description": "ID of publication to return"
+          
             }
           ],
           "responses": {
@@ -141,21 +117,12 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "type": "object",
-                    "additionalProperties": {
-                      "type": "integer",
-                      "format": "int32"
-                    }
+                    "type": "object"
                   }
                 }
               }
             }
-          },
-          "security": [
-            {
-              "api_key": []
-            }
-          ]
+          }
         },
         "post": {
           "tags": [
@@ -200,7 +167,7 @@
           }
         }
       },
-      "/publications/{publication_id}": {
+      "/publications/publication_id": {
         "get": {
           "tags": [
             "publicationByID"
@@ -211,13 +178,10 @@
           "parameters": [
             {
               "name": "publicationId",
-              "in": "path",
-              "description": "ID of publication that needs to be fetched",
-              "required": true,
-              "schema": {
-                "type": "SERIAL BIGINT",
-                "format": "int64"
-              }
+              "in": "query",
+              "required": false,
+              "explode": true
+              
             }
           ],
           "responses": {
@@ -226,12 +190,7 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/schemas/publicationByID"
-                  }
-                },
-                "application/xml": {
-                  "schema": {
-                    "$ref": "#/components/schemas/publicationByID"
+                    "type": "array"
                   }
                 }
               }
@@ -251,24 +210,24 @@
             "user"
           ],
           "summary": "Create user",
-          "description": "This can only be done by the logged in user.",
+          "description": "",
           "operationId": "createUser",
           "requestBody": {
             "description": "Created user object",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/User"
+                  "$ref": "#/components/schemas/users"
                 }
               },
               "application/xml": {
                 "schema": {
-                  "$ref": "#/components/schemas/User"
+                  "$ref": "#/components/schemas/users"
                 }
               },
               "application/x-www-form-urlencoded": {
                 "schema": {
-                  "$ref": "#/components/schemas/User"
+                  "$ref": "#/components/schemas/users"
                 }
               }
             }
@@ -279,12 +238,12 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/schemas/User"
+                    "$ref": "#/components/schemas/users"
                   }
                 },
                 "application/xml": {
                   "schema": {
-                    "$ref": "#/components/schemas/User"
+                    "$ref": "#/components/schemas/users"
                   }
                 }
               }
@@ -292,7 +251,7 @@
           }
         }
       },
-      "/user/:user_id": {
+      "/users/{user_id}": {
         "get": {
           "tags": [
             "user"
@@ -300,21 +259,16 @@
           "summary": "Get one user by ID",
           "description": "Get ona user by id",
           "operationId": "getUser",
-          "requestBody": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/users"
-                  }
-                }
-              }
+          "parameters": [
+            {
+              "name": "user_id",
+              "in": "path",
+              "description": "ID of user to return"
             }
-          },
+          ],
           "responses": {
             "200": {
-              "description": "Successful operation",
+              "description": "successful operation",
               "content": {
                 "application/json": {
                   "schema": {
@@ -328,39 +282,17 @@
                 }
               }
             },
-            "default": {
-              "description": "successful operation"
-            }
-          }
-        }
-      },
-      "/user/:user_id/votes": {
-        "get": {
-          "tags": [
-            "user"
-          ],
-          "summary": "Get user votes by ID",
-          "description": "",
-          "operationId": "getVotes",
-          "parameters": [
-            {
-              "name": "username",
-              "in": "query",
-              "description": "The vote of one user",
-              "required": false
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "successful operation"
-            },
             "400": {
-              "description": "Invalid user ID."
+              "description": "Invalid ID supplied"
+            },
+            "404": {
+              "description": "User not found"
             }
           }
         }
       },
-      "/user/:user_id/publications": {
+      
+      "/users/:user_id/publications": {
         "get": {
           "tags": [
             "user"
@@ -370,13 +302,10 @@
           "operationId": "getPublications",
           "parameters": [
             {
-              "name": "user",
-              "in": "path",
-              "description": "The name that needs to be fetched. Use user1 for testing. ",
-              "required": true,
-              "schema": {
-                "type": "string"
-              }
+              "name": "user_id",
+              "in": "user_id",
+              "description": "ID of publication to return"
+          
             }
           ],
           "responses": {
@@ -385,21 +314,21 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/schemas/user"
+                    "$ref": "#/components/schemas/publicationsById"
                   }
                 },
                 "application/xml": {
                   "schema": {
-                    "$ref": "#/components/schemas/user"
+                    "$ref": "#/components/schemas/publicationsById"
                   }
                 }
               }
             },
             "400": {
-              "description": "Invalid user supplied"
+              "description": "Invalid ID supplied"
             },
             "404": {
-              "description": "User not found"
+              "description": "Publication not found"
             }
           }
         }
@@ -407,252 +336,167 @@
     },
     "components": {
       "schemas": {
-        "Order": {
+        "users": {
           "type": "object",
           "properties": {
             "id": {
-              "type": "integer",
-              "format": "int64",
-              "example": 10
+              "type": "uuid"
             },
-            "petId": {
-              "type": "integer",
-              "format": "int64",
-              "example": 198772
+            "first_name": {
+              "type": "varchar"
             },
-            "quantity": {
-              "type": "integer",
-              "format": "int32",
-              "example": 7
-            },
-            "shipDate": {
-              "type": "string",
-              "format": "date-time"
-            },
-            "status": {
-              "type": "string",
-              "description": "Order Status",
-              "example": "approved",
-              "enum": [
-                "placed",
-                "approved",
-                "delivered"
-              ]
-            },
-            "complete": {
-              "type": "boolean"
-            }
-          },
-          "xml": {
-            "name": "order"
-          }
-        },
-        "Customer": {
-          "type": "object",
-          "properties": {
-            "id": {
-              "type": "integer",
-              "format": "int64",
-              "example": 100000
-            },
-            "username": {
-              "type": "string",
-              "example": "fehguy"
-            },
-            "address": {
-              "type": "array",
-              "xml": {
-                "name": "addresses",
-                "wrapped": true
-              },
-              "items": {
-                "$ref": "#/components/schemas/Address"
-              }
-            }
-          },
-          "xml": {
-            "name": "customer"
-          }
-        },
-        "Address": {
-          "type": "object",
-          "properties": {
-            "street": {
-              "type": "string",
-              "example": "437 Lytton"
-            },
-            "city": {
-              "type": "string",
-              "example": "Palo Alto"
-            },
-            "state": {
-              "type": "string",
-              "example": "CA"
-            },
-            "zip": {
-              "type": "string",
-              "example": "94301"
-            }
-          },
-          "xml": {
-            "name": "address"
-          }
-        },
-        "Category": {
-          "type": "object",
-          "properties": {
-            "id": {
-              "type": "integer",
-              "format": "int64",
-              "example": 1
-            },
-            "name": {
-              "type": "string",
-              "example": "Dogs"
-            }
-          },
-          "xml": {
-            "name": "category"
-          }
-        },
-        "User": {
-          "type": "object",
-          "properties": {
-            "id": {
-              "type": "integer",
-              "format": "int64",
-              "example": 10
-            },
-            "username": {
-              "type": "string",
-              "example": "theUser"
-            },
-            "firstName": {
-              "type": "string",
-              "example": "John"
-            },
-            "lastName": {
-              "type": "string",
-              "example": "James"
+            "last_name": {
+              "type": "varchar"
             },
             "email": {
-              "type": "string",
-              "example": "john@email.com"
+              "type": "varchar"
+            },
+            "username": {
+              "type": "varchar"
             },
             "password": {
-              "type": "string",
-              "example": "12345"
+              "type": "varchar"
+            },
+            "email_verified": {
+              "type": "datetime"
+            },
+            "token": {
+              "type": "varchar"
+            }
+          }
+        },
+        "profiles": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "uuid"
+            },
+            "user_id": {
+              "type": "uuid"
+            },
+            "role_id": {
+              "type": "interger"
+            },
+            "country_id": {
+              "type": "interger"
+            },
+            "image_url": {
+              "type": "varchar"
+            },
+            "code_phone": {
+              "type": "interger"
             },
             "phone": {
-              "type": "string",
-              "example": "12345"
-            },
-            "userStatus": {
-              "type": "integer",
-              "description": "User Status",
-              "format": "int32",
-              "example": 1
+              "type": "interger"
             }
-          },
-          "xml": {
-            "name": "user"
           }
+         
         },
-        "Tag": {
+        "countries": {
           "type": "object",
           "properties": {
             "id": {
-              "type": "integer",
-              "format": "int64"
+              "type": "serial"
             },
             "name": {
-              "type": "string"
+              "type": "varchar"
             }
-          },
-          "xml": {
-            "name": "tag"
           }
         },
-        "Pet": {
-          "required": [
-            "name",
-            "photoUrls"
-          ],
+        "state": {
           "type": "object",
           "properties": {
             "id": {
-              "type": "integer",
-              "format": "int64",
-              "example": 10
+              "type": "serial"
+            },
+            "country_id": {
+              "type": "interger"
             },
             "name": {
-              "type": "string",
-              "example": "doggie"
-            },
-            "category": {
-              "$ref": "#/components/schemas/Category"
-            },
-            "photoUrls": {
-              "type": "array",
-              "xml": {
-                "wrapped": true
-              },
-              "items": {
-                "type": "string",
-                "xml": {
-                  "name": "photoUrl"
-                }
-              }
-            },
-            "tags": {
-              "type": "array",
-              "xml": {
-                "wrapped": true
-              },
-              "items": {
-                "$ref": "#/components/schemas/Tag"
-              }
-            },
-            "status": {
-              "type": "string",
-              "description": "pet status in the store",
-              "enum": [
-                "available",
-                "pending",
-                "sold"
-              ]
+              "type": "varchar"
             }
-          },
-          "xml": {
-            "name": "pet"
           }
         },
-        "ApiResponse": {
+        "cities": {
           "type": "object",
           "properties": {
-            "code": {
-              "type": "integer",
-              "format": "int32"
+            "id": {
+              "type": "serial"
             },
-            "type": {
-              "type": "string"
+            "state_id": {
+              "type": "interger"
             },
-            "message": {
-              "type": "string"
+            "name": {
+              "type": "varchar"
             }
-          },
-          "xml": {
-            "name": "##default"
+          }
+        },
+        "roles": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "serial"
+            },
+            "name": {
+              "type": "varchar"
+            }
+          }
+        },
+        "publications": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "SERIAL BIGINT"
+            },
+            "profile_id": {
+              "type": "uuid"
+            },
+            "publication_type_id": {
+              "type": "interger"
+            },
+            "city_id": {
+              "type": "varchar"
+            },
+            "title": {
+              "type": "varchar"
+            },
+            "description": {
+              "type": "varchar"
+            },
+            "content": {
+              "type": "text"
+            },
+            "picture": {
+              "type": "varchar"
+            },
+            "image_url ": {
+              "type": "varchar"
+            }
+          }
+        },
+        "publications_types": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "serial"
+            },
+            "name": {
+              "type": "varchar"
+            },
+            "description": {
+              "type": "varchar"
+            }
           }
         }
+
       },
       "requestBodies": {
-        "Pet": {
-          "description": "Pet object that needs to be added to the store",
+        "users": {
+          "description": "User object that needs to be added to the store",
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Pet"
+                "$ref": "#/components/schemas/users"
               }
             },
             "application/xml": {
@@ -675,25 +519,6 @@
             }
           }
         }
-      },
-      "securitySchemes": {
-        "petstore_auth": {
-          "type": "oauth2",
-          "flows": {
-            "implicit": {
-              "authorizationUrl": "https://petstore3.swagger.io/oauth/authorize",
-              "scopes": {
-                "write:pets": "modify pets in your account",
-                "read:pets": "read your pets"
-              }
-            }
-          }
-        },
-        "api_key": {
-          "type": "apiKey",
-          "name": "api_key",
-          "in": "header"
-        }
       }
-    }
   }
+}
